--- a/app/assets/stylesheets/application/objects/_page.scss
+++ b/app/assets/stylesheets/application/objects/_page.scss
@@ -1,5 +1,9 @@
 @import '../helpers';
 
+.o-page {
+  // padding-top: 50px;
+}
+
 .o-page__header,
 .o-page__title {
   display: flex;
